--- a/GoogleMaps/res/layout/main.xml
+++ b/GoogleMaps/res/layout/main.xml
@@ -8,7 +8,15 @@
 	android:layout_width="fill_parent"
 	android:layout_height="fill_parent"
 	android:clickable="true"
+	android:enabled="true"
 	android:apiKey="0b_N5hlHknd30qJafKaow_0gV9tYt47VyxOZcBA"
 	/>
+
+	<LinearLayout android:id="@+id/zoom" 
+        android:layout_width="wrap_content" 
+        android:layout_height="wrap_content" 
+        android:layout_alignParentBottom="true" 
+        android:layout_centerHorizontal="true" 
+        /> 
 
 </RelativeLayout>
