--- a/ToDo/res/layout/group_edit.xml
+++ b/ToDo/res/layout/group_edit.xml
@@ -10,12 +10,12 @@
 		<TableRow android:id="@+id/TableRow01" android:layout_width="wrap_content"
 			android:layout_height="wrap_content">
 			<TextView android:id="@+id/PlaceName" android:layout_width="fill_parent"
-				android:layout_height="wrap_content" android:text="Place Name"
+				android:layout_height="wrap_content" android:text="Group Name"
 				android:textSize="20px">
 			</TextView>
 
 			<Button android:id="@+id/Button01" android:layout_width="wrap_content"
-				android:layout_height="wrap_content" android:text="Add ToDo">
+				android:layout_height="wrap_content" android:text="+">
 			</Button>
 		</TableRow>
 	</TableLayout>
@@ -43,13 +43,6 @@
 			android:layout_width="fill_parent" android:layout_height="wrap_content">
 		</TableLayout>
 	</ScrollView>
-
-	<TableLayout android:layout_width="fill_parent"
-		android:layout_height="wrap_content">
-		<Button android:id="@+id/ButtonGroup" android:layout_width="wrap_content"
-			android:layout_height="wrap_content" android:text="Group">
-		</Button>
-	</TableLayout>
 
 </LinearLayout>
 
