--- a/ToDo_Replica/res/layout/custom_title.xml
+++ b/ToDo_Replica/res/layout/custom_title.xml
@@ -2,8 +2,7 @@
 <RelativeLayout
 	xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    >
+    android:layout_height="fill_parent">
 	<TextView
 		android:id="@+id/tv_custom_title"
 		android:layout_width="wrap_content"
