--- a/ToDo_Replica/res/layout/main.xml
+++ b/ToDo_Replica/res/layout/main.xml
@@ -1,32 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
 	xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    >
-	<TableLayout
-		android:id="@+id/tl_main"
+    android:gravity="center_vertical"
+    android:background="#ffffffff">
+    <ImageView
+		android:id="@+id/iv_background"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:stretchColumns="0"
-		android:layout_gravity="center_vertical">
-		<Button
-			android:id="@+id/b_maps"
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:text="Maps">
-		</Button>
-		<Button
-			android:id="@+id/b_todo_lists"
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:text="ToDo Lists">
-		</Button>
-		<Button
-			android:id="@+id/b_groups"
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:text="Groups">
-		</Button>
-	</TableLayout>
-</LinearLayout>
+		android:layout_centerInParent="true">
+	</ImageView>
+	<!--
+	<Button
+		android:id="@+id/b_maps"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:text="Maps">
+	</Button>
+	<Button
+		android:id="@+id/b_todo_lists"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:text="ToDo Lists"
+		android:layout_below="@+id/b_maps">
+	</Button>
+	<Button
+		android:id="@+id/b_groups"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:text="Groups"
+		android:layout_below="@+id/b_todo_lists">
+	</Button>
+	-->
+</RelativeLayout>
