--- a/ToDo_Replica/res/layout/groups.xml
+++ b/ToDo_Replica/res/layout/groups.xml
@@ -1,8 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
-	android:layout_width="fill_parent" android:layout_height="fill_parent">
-	<TextView android:layout_width="wrap_content"
-		android:layout_height="wrap_content" android:text="Groups" />
+	android:layout_width="fill_parent" android:layout_height="fill_parent"
+	android:stretchColumns="0">
+	<TableRow android:layout_width="wrap_content"
+		android:layout_height="wrap_content">
+		<TextView android:layout_width="fill_parent"
+			android:layout_height="wrap_content" android:text="Groups" />
+		<Button android:id="@+id/addGroup" android:layout_width="wrap_content"
+			android:layout_height="wrap_content" android:text="+" />
+	</TableRow>
 	<ScrollView android:id="@+id/sv_group_lists"
 		android:layout_width="wrap_content" android:layout_height="wrap_content"
 		android:scrollbars="vertical">
