--- a/ToDo_Replica/res/layout/todo_lists.xml
+++ b/ToDo_Replica/res/layout/todo_lists.xml
@@ -1,11 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
-	android:layout_width="fill_parent" android:layout_height="fill_parent">
+<TableLayout
+	xmlns:android="http://schemas.android.com/apk/res/android"
+	android:layout_width="fill_parent"
+	android:layout_height="fill_parent">
 	<ScrollView android:id="@+id/sv_todo_lists"
-		android:layout_width="wrap_content" android:layout_height="wrap_content"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
 		android:scrollbars="vertical">
 		<TableLayout android:id="@+id/tl_todo_lists"
-			android:layout_width="fill_parent" android:layout_height="wrap_content">
+			android:layout_width="fill_parent"
+			android:layout_height="wrap_content">
 		</TableLayout>
 	</ScrollView>
 </TableLayout>
