--- a/ToDo_Replica/res/layout/add.xml
+++ b/ToDo_Replica/res/layout/add.xml
@@ -128,6 +128,24 @@
 		</Spinner>
 	</TableRow>
 	<TableRow
+		android:id="@+id/tr_priority"
+		android:layout_width="fill_parent"
+		android:layout_height="wrap_content"
+		android:gravity="center_vertical">
+		<TextView
+			android:id="@+id/tv_priority"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:text="Priority"
+			android:textSize="20px">
+		</TextView>
+		<Spinner
+			android:id="@+id/s_priority"
+			android:layout_width="350px"
+			android:layout_height="wrap_content">
+		</Spinner>
+	</TableRow>
+	<TableRow
 		android:id="@+id/tr_submit"
 		android:layout_width="fill_parent"
 		android:layout_height="wrap_content"
