--- a/ToDo_Replica/res/layout/preview.xml
+++ b/ToDo_Replica/res/layout/preview.xml
@@ -1,8 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<TabHost
 	xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent">
+	android:id="@+id/th_preview"
+	android:layout_width="fill_parent"
+	android:layout_height="fill_parent">
+<LinearLayout
+	android:id="@+id/ll_preview"
+	android:layout_width="fill_parent"
+	android:layout_height="fill_parent"
+	android:orientation="vertical">
+<TabWidget
+	android:id="@android:id/tabs"
+	android:layout_width="fill_parent"
+	android:layout_height="wrap_content">
+</TabWidget>
+<FrameLayout
+	android:id="@android:id/tabcontent"
+	android:layout_width="fill_parent"
+	android:layout_height="fill_parent">
 <ScrollView
 	android:id="@+id/sv_preview"
 	android:layout_width="wrap_content"
@@ -139,6 +154,26 @@
 			android:textSize="20px">
 		</TextView>
 	</TableRow>
+	<TableRow
+		android:id="@+id/tr_deadline_preview"
+		android:layout_width="fill_parent"
+		android:layout_height="wrap_content">
+		<TextView
+			android:id="@+id/tv_deadline_preview1"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:text="Deadline"
+			android:textSize="20px">
+		</TextView>
+		<TextView
+			android:id="@+id/tv_deadline_preview2"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:textSize="20px">
+		</TextView>
+	</TableRow>
 </TableLayout>
 </ScrollView>
+</FrameLayout>
 </LinearLayout>
+</TabHost>
