--- a/server_stuffs/dummy_server/app/views/posts/show.html.erb
+++ b/server_stuffs/dummy_server/app/views/posts/show.html.erb
@@ -15,6 +15,17 @@
   <%= @post.content %>
 </p>
 
+<p>
+  <b>Tags:</b>
+  <%= @post.tags.map { |t| t.name }.join(", ") %>
+</p>
+
+<h2>Comments</h2>
+<%= render :partial => "comments/comment",
+           :collection => @post.comments %>
+
+<h2>Add a comment:</h2>
+<%= render "comments/form" %>
 
 <%= link_to 'Edit', edit_post_path(@post) %> |
 <%= link_to 'Back', posts_path %>
