polish main menu

--- a/ToDo_Replica/res/layout/main.xml
+++ b/ToDo_Replica/res/layout/main.xml
@@ -3,31 +3,41 @@
 	xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:gravity="center_vertical">
+    android:gravity="center_vertical"
+    android:background="#FFFFFF">
     <ImageView
 		android:id="@+id/iv_background"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:layout_centerInParent="true">
 	</ImageView>
-	<Button
+	<ImageButton
 		android:id="@+id/b_maps"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:text="Maps">
-	</Button>
-	<Button
+		android:background="@android:drawable/ic_menu_myplaces"
+		android:layout_marginRight="50px">
+	</ImageButton>
+	<ImageButton
 		android:id="@+id/b_todo_lists"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:text="ToDo Lists"
-		android:layout_below="@+id/b_maps">
-	</Button>
-	<Button
+		android:background="@android:drawable/ic_menu_agenda"
+		android:layout_toRightOf="@+id/b_maps"
+		android:layout_marginRight="50px">
+	</ImageButton>
+	<ImageButton
 		android:id="@+id/b_groups"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:text="Groups"
-		android:layout_below="@+id/b_todo_lists">
-	</Button>
+		android:layout_toRightOf="@+id/b_todo_lists"
+		android:layout_marginRight="50px">
+	</ImageButton>
+	<ImageButton
+		android:id="@+id/b_settings"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:background="@android:drawable/ic_menu_manage"
+		android:layout_toRightOf="@+id/b_groups">
+	</ImageButton>
 </RelativeLayout>
