--- a/ToDo_Replica/res/layout/custom_title.xml
+++ b/ToDo_Replica/res/layout/custom_title.xml
@@ -24,6 +24,15 @@
 		android:layout_width="50px"
 		android:layout_height="50px"
 		android:layout_toLeftOf="@id/ib_custom_search"
-		android:background="@android:drawable/ic_menu_add">
+		android:background="@android:drawable/ic_menu_add"
+		android:layout_marginRight="25px">
+	</ImageButton>
+	<ImageButton
+		android:id="@+id/ib_custom_refresh"
+		android:layout_width="50px"
+		android:layout_height="50px"
+		android:layout_toLeftOf="@id/ib_custom_add"
+		android:background="@android:drawable/ic_menu_rotate"
+		android:layout_marginRight="25px">
 	</ImageButton>
 </RelativeLayout>
