--- a/server_stuffs/todoserver/app/views/home/index.html.erb
+++ b/server_stuffs/todoserver/app/views/home/index.html.erb
@@ -2,3 +2,5 @@
 <%= link_to "Entries", entries_path %>
 <p></p>
 <%= link_to "Details", tododetails_path %>
+<p></p>
+<%= link_to "Groups", groups_path %>
