Todoserver has a working implementation of users-groups-todo tables. (Still need to add invitation)

--- a/server_stuffs/todoserver/app/views/tododetails/index.html.erb
+++ b/server_stuffs/todoserver/app/views/tododetails/index.html.erb
@@ -6,9 +6,8 @@
     <th>Place</th>
     <th>Note</th>
     <th>Tag</th>
-    <th>Group</th>
     <th>Status</th>
-    <th>Delivered</th>
+    <th>Priority</th>
     <th></th>
     <th></th>
     <th></th>
@@ -20,9 +19,8 @@
     <td><%= tododetail.place %></td>
     <td><%= tododetail.note %></td>
     <td><%= tododetail.tag %></td>
-    <td><%= tododetail.group %></td>
     <td><%= tododetail.status %></td>
-    <td><%= tododetail.delivered %></td>
+    <td><%= tododetail.priority %></td>
     <td><%= link_to 'Show', tododetail %></td>
     <td><%= link_to 'Edit', edit_tododetail_path(tododetail) %></td>
     <td><%= link_to 'Destroy', tododetail, :confirm => 'Are you sure?', :method => :delete %></td>
