--- a/server_stuffs/todoserver/app/views/home/index.html.erb
+++ b/server_stuffs/todoserver/app/views/home/index.html.erb
@@ -1,6 +1,4 @@
 <h1>ToDo's Server</h1>
-<%= link_to "Entries", entries_path %>
-<p></p>
-<%= link_to "Details", tododetails_path %>
-<p></p>
 <%= link_to "Groups", groups_path %>
+<p></p>
+<%= link_to "Users", users_path %>
