--- a/server_stuffs/todoserver/app/views/tododetails/_form.html.erb
+++ b/server_stuffs/todoserver/app/views/tododetails/_form.html.erb
@@ -21,24 +21,21 @@
   </div>
   <div class="field">
     <%= f.label :note %><br />
-    <%= f.text_area :note %>
+    <%= f.text_field :note %>
   </div>
   <div class="field">
     <%= f.label :tag %><br />
-    <%= f.text_area :tag %>
-  </div>
-  <div class="field">
-    <%= f.label :group %><br />
-    <%= f.text_field :group %>
+    <%= f.text_field :tag %>
   </div>
   <div class="field">
     <%= f.label :status %><br />
     <%= f.text_field :status %>
   </div>
   <div class="field">
-    <%= f.label :delivered %><br />
-    <%= f.text_field :delivered %>
+    <%= f.label :priority %><br />
+    <%= f.text_field :priority %>
   </div>
+
   <div class="actions">
     <%= f.submit %>
   </div>
