--- a/server_stuffs/todoserver/app/views/tododetails/show.html.erb
+++ b/server_stuffs/todoserver/app/views/tododetails/show.html.erb
@@ -21,30 +21,14 @@
 </p>
 
 <p>
-  <b>Group:</b>
-  <%= @tododetail.group %>
-</p>
-
-<p>
   <b>Status:</b>
   <%= @tododetail.status %>
 </p>
 
 <p>
-  <b>Delivered:</b>
-  <%= @tododetail.delivered %>
+  <b>Priority:</b>
+  <%= @tododetail.priority %>
 </p>
-
-<h2>Add todo:</h2>
-<%= form_for([@group, @group.tododetails.build]) do |f| %>
-  <div class="field">
-     <%= f.label :todo %><br />
-     <%= f.text_field :commenter %>
-  </div>
-  <div class="actions">
-     <%= f.submit %>
-  </div>
-<% end %>
 
 <%= link_to 'Edit', edit_tododetail_path(@tododetail) %> |
 <%= link_to 'Back', tododetails_path %>
