--- a/server_stuffs/todoserver/app/views/users/show.html.erb
+++ b/server_stuffs/todoserver/app/views/users/show.html.erb
@@ -19,7 +19,7 @@
 
   <p>
     <%= link_to "Unsubscribe", "/users/" + "#{@user.id}" + "/unsubscribe" + "?group_name=#{group.name}&user_name=#{@user.name}" %>
-    <%= link_to "Delete", "/groups/" + "#{group.id}" + "?user_id=#{@user.id}", :method => :delete %>
+    <%= link_to "Delete", "/groups/" + "#{group.id}", :method => :delete %>
   </p>
 
 <% end %>
