--- a/ToDo_Replica/res/layout/main_menu.xml
+++ b/ToDo_Replica/res/layout/main_menu.xml
@@ -1,8 +1,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 	<item android:id="@+id/m_settings"
-          android:icon="@android:drawable/ic_menu_preferences"
+          android:icon="@drawable/menu_settings"
           android:title="Settings" />
     <item android:id="@+id/m_feedback"
-          android:icon="@android:drawable/ic_menu_send"
+          android:icon="@drawable/menu_feedback"
           android:title="Feedback" />
 </menu>
