--- a/server_stuffs/todoserver/app/views/users/_form.html.erb
+++ b/server_stuffs/todoserver/app/views/users/_form.html.erb
@@ -15,6 +15,15 @@
     <%= f.label :name %><br />
     <%= f.text_field :name %>
   </div>
+  <div class="field">
+    <%= f.label :number %><br />
+    <%= f.text_field :number %>
+  </div>
+  <div class="field">
+    <%= f.label :email %><br />
+    <%= f.text_field :email %>
+  </div>
+
   <div class="actions">
     <%= f.submit %>
   </div>
