InvitationWindow v1 + ServerConnection works for static page

--- a/server_stuffs/todoserver/app/views/tododetails/index.html.erb
+++ b/server_stuffs/todoserver/app/views/tododetails/index.html.erb
@@ -2,7 +2,7 @@
 
 <table>
   <tr>
-    <th>Todo</th>
+    <th>Title</th>
     <th>Place</th>
     <th>Note</th>
     <th>Tag</th>
@@ -15,7 +15,7 @@
 
 <% @tododetails.each do |tododetail| %>
   <tr>
-    <td><%= tododetail.todo %></td>
+    <td><%= tododetail.title %></td>
     <td><%= tododetail.place %></td>
     <td><%= tododetail.note %></td>
     <td><%= tododetail.tag %></td>
