--- a/ToDo_Replica/res/layout/main_menu.xml
+++ b/ToDo_Replica/res/layout/main_menu.xml
@@ -2,6 +2,9 @@
 	<item android:id="@+id/m_settings"
           android:icon="@drawable/menu_settings"
           android:title="Settings" />
+    <item android:id="@+id/m_invitations"
+    	  android:icon="@drawable/menu_invitations"
+    	  android:title="Invitations" />
     <item android:id="@+id/m_feedback"
           android:icon="@drawable/menu_feedback"
           android:title="Feedback" />
