--- a/ToDo_Replica/res/layout/add_group.xml
+++ b/ToDo_Replica/res/layout/add_group.xml
@@ -32,6 +32,25 @@
 		</EditText>
 	</TableRow>
 	<TableRow
+		android:id="@+id/tr_description"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content">
+		<TextView
+			android:id="@+id/tv_description"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:text="Description"
+			android:textSize="20px">
+		</TextView>
+		<EditText
+			android:id="@+id/et_description"
+			android:layout_width="350px"
+			android:layout_height="wrap_content"
+			android:hint="Touch here to edit description"
+			android:textSize="20px">
+		</EditText>
+	</TableRow>	
+	<TableRow
 		android:id="@+id/tr_members"
 		android:layout_width="fill_parent"
 		android:layout_height="wrap_content">
