add do not work

--- a/ToDo_Replica/res/layout/main_menu.xml
+++ b/ToDo_Replica/res/layout/main_menu.xml
@@ -5,4 +5,7 @@
     <item android:id="@+id/m_feedback"
           android:icon="@drawable/menu_feedback"
           android:title="Feedback" />
+    <item android:id="@+id/m_pending_request"
+          android:icon="@drawable/menu_pending_request"
+          android:title="Pending Request" />
 </menu>
