--- a/ToDo_Replica/res/layout/add.xml
+++ b/ToDo_Replica/res/layout/add.xml
@@ -19,13 +19,12 @@
 <FrameLayout
 	android:id="@android:id/tabcontent"
 	android:layout_width="fill_parent"
-	android:layout_height="wrap_content">
+	android:layout_height="fill_parent">
 
 <ScrollView
-	android:layout_width="fill_parent"
+	android:layout_width="wrap_content"
 	android:layout_height="wrap_content"
-	android:scrollbars="vertical"
-	android:paddingTop="13dp">
+	android:scrollbars="vertical">
 	
 <TableLayout
 	android:id="@+id/tl_add_1"
@@ -34,30 +33,30 @@
 	android:stretchColumns="0">
 	
 	<TableRow
-		android:layout_width="fill_parent"
-		android:layout_height="wrap_content">
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:paddingTop="13dp">
 		<TextView
-			android:layout_width="fill_parent"
+			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:text="Title"
 			android:textSize="20px">
 		</TextView>
 	</TableRow>
 	<TableRow
-		android:layout_width="fill_parent"
+		android:layout_width="wrap_content"
 		android:layout_height="wrap_content">
 		<EditText
 			android:id="@+id/et_title"
-			android:layout_width="fill_parent"
+			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:hint="Touch here to edit the title"
-			android:textSize="20px"
-			android:layout_marginRight="50px">
+			android:textSize="20px">
 		</EditText>
 	</TableRow>
 	
 	<TableRow
-		android:layout_width="fill_parent"
+		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:paddingTop="13dp">
 		<TextView
@@ -68,66 +67,72 @@
 		</TextView>
 	</TableRow>
 	<TableRow
-		android:id="@+id/tr_place"
-		android:layout_width="fill_parent"
+		android:layout_width="wrap_content"
 		android:layout_height="wrap_content">
 		<EditText
 			android:id="@+id/et_place"
 			android:layout_width="fill_parent"
 			android:layout_height="wrap_content"
 			android:hint="Touch here to edit the place"
-			android:textSize="20px"
-			android:layout_marginRight="50px">
+			android:textSize="20px">
 		</EditText>
 	</TableRow>
 	
 	<TableRow
-		android:id="@+id/tr_group"
-		android:layout_width="fill_parent"
+		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:gravity="center_vertical">
+		android:paddingTop="13dp">
 		<TextView
-			android:id="@+id/tv_group"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:text="Group"
 			android:textSize="20px">
 		</TextView>
+	</TableRow>
+	<TableRow
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content">
 		<Spinner
 			android:id="@+id/s_group"
-			android:layout_width="350px"
+			android:layout_width="fill_parent"
 			android:layout_height="wrap_content">
 		</Spinner>
 	</TableRow>
+	
 	<TableRow
-		android:id="@+id/tr_status"
-		android:layout_width="fill_parent"
+		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:gravity="center_vertical">
+		android:paddingTop="13dp">
 		<TextView
-			android:id="@+id/tv_status"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:text="Status"
 			android:textSize="20px">
 		</TextView>
+	</TableRow>
+	<TableRow
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content">
 		<Spinner
 			android:id="@+id/s_status"
-			android:layout_width="350px"
+			android:layout_width="fill_parent"
 			android:layout_height="wrap_content">
 		</Spinner>
 	</TableRow>
+	
 	<TableRow
-		android:id="@+id/tr_submit_1"
-		android:layout_width="fill_parent"
+		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:gravity="center">
+		android:paddingTop="13dp"
+		android:gravity="center_horizontal">
 		<Button
 			android:id="@+id/b_submit_1"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:text="Submit"
-			android:textSize="20px">
+			android:textSize="20px"
+			android:layout_marginLeft="150px"
+			android:layout_marginRight="150px">
 		</Button>
 	</TableRow>
 </TableLayout>
@@ -136,18 +141,18 @@
 <ScrollView
 	android:layout_width="wrap_content"
 	android:layout_height="wrap_content"
-	android:scrollbars="vertical"
-	android:paddingTop="13dp">
+	android:scrollbars="vertical">
+	
 <TableLayout
 	android:id="@+id/tl_add_2"
-	android:layout_width="fill_parent"
+	android:layout_width="wrap_content"
 	android:layout_height="wrap_content"
 	android:stretchColumns="0">
+	
 	<TableRow
-		android:id="@+id/tr_note"
-		android:layout_width="fill_parent"
+		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:gravity="center_vertical">
+		android:paddingTop="13dp">
 		<TextView
 			android:id="@+id/tv_note"
 			android:layout_width="wrap_content"
@@ -155,19 +160,23 @@
 			android:text="Note"
 			android:textSize="20px">
 		</TextView>
+	</TableRow>
+	<TableRow
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content">
 		<EditText
 			android:id="@+id/et_note"
-			android:layout_width="350px"
+			android:layout_width="fill_parent"
 			android:layout_height="wrap_content"
 			android:hint="Touch here to edit the note"
 			android:textSize="20px">
 		</EditText>
 	</TableRow>
+	
 	<TableRow
-		android:id="@+id/tr_tag"
-		android:layout_width="fill_parent"
+		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:gravity="center_vertical">
+		android:paddingTop="13dp">
 		<TextView
 			android:id="@+id/tv_status"
 			android:layout_width="wrap_content"
@@ -175,19 +184,23 @@
 			android:text="Tag"
 			android:textSize="20px">
 		</TextView>
+	</TableRow>
+	<TableRow
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content">
 		<AutoCompleteTextView
 			android:id="@+id/actv_tag"
-			android:layout_width="350px"
+			android:layout_width="fill_parent"
 			android:layout_height="wrap_content"
 			android:hint="Touch here to edit the tag"
 			android:textSize="20px">
 		</AutoCompleteTextView>
 	</TableRow>
+	
 	<TableRow
-		android:id="@+id/tr_priority"
-		android:layout_width="fill_parent"
+		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:gravity="center_vertical">
+		android:paddingTop="13dp">
 		<TextView
 			android:id="@+id/tv_priority"
 			android:layout_width="wrap_content"
@@ -195,17 +208,21 @@
 			android:text="Priority"
 			android:textSize="20px">
 		</TextView>
+	</TableRow>
+	<TableRow
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content">
 		<Spinner
 			android:id="@+id/s_priority"
-			android:layout_width="350px"
+			android:layout_width="fill_parent"
 			android:layout_height="wrap_content">
 		</Spinner>
 	</TableRow>
+	
 	<TableRow
-		android:id="@+id/tr_deadline"
-		android:layout_width="fill_parent"
+		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:gravity="center_vertical">
+		android:paddingTop="13dp">
 		<TextView
 			android:id="@+id/tv_deadline"
 			android:layout_width="wrap_content"
@@ -213,28 +230,34 @@
 			android:text="Deadline"
 			android:textSize="20px">
 		</TextView>
+	</TableRow>
+	<TableRow
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content">
 		<Spinner
 			android:id="@+id/s_deadline"
-			android:layout_width="350px"
+			android:layout_width="fill_parent"
 			android:layout_height="wrap_content">
 		</Spinner>
 	</TableRow>
+	
 	<TableRow
-		android:id="@+id/tr_submit_2"
 		android:layout_width="fill_parent"
 		android:layout_height="wrap_content"
-		android:gravity="center">
+		android:paddingTop="13dp"
+		android:gravity="center_horizontal">
 		<Button
-			android:id="@+id/b_submit2"
+			android:id="@+id/b_submit_2"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:text="Submit"
-			android:textSize="20px">
+			android:textSize="20px"
+			android:layout_marginLeft="150px"
+			android:layout_marginRight="150px">
 		</Button>
 	</TableRow>
 </TableLayout>
 </ScrollView>
-
 </FrameLayout>
 </LinearLayout>
 </TabHost>
