--- a/ToDo_Replica/res/layout/add.xml
+++ b/ToDo_Replica/res/layout/add.xml
@@ -40,19 +40,27 @@
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:text="Title"
-			android:textSize="20px">
+			android:textSize="20px"
+			android:layout_marginLeft="60px">
 		</TextView>
 	</TableRow>
 	<TableRow
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content">
-		<EditText
-			android:id="@+id/et_title"
+		<LinearLayout
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
-			android:hint="Touch here to edit the title"
-			android:textSize="20px">
-		</EditText>
+			android:orientation="horizontal">
+			<EditText
+				android:id="@+id/et_title"
+				android:layout_width="fill_parent"
+				android:layout_height="wrap_content"
+				android:hint="Touch here to edit the title"
+				android:textSize="20px"
+				android:layout_marginRight="60px"
+				android:layout_marginLeft="60px">
+			</EditText>
+		</LinearLayout>
 	</TableRow>
 	
 	<TableRow
@@ -63,19 +71,27 @@
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:text="Place"
-			android:textSize="20px">
+			android:textSize="20px"
+			android:layout_marginLeft="60px">
 		</TextView>
 	</TableRow>
 	<TableRow
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content">
-		<EditText
-			android:id="@+id/et_place"
-			android:layout_width="fill_parent"
+		<LinearLayout
+			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
-			android:hint="Touch here to edit the place"
-			android:textSize="20px">
-		</EditText>
+			android:orientation="horizontal">
+			<EditText
+				android:id="@+id/et_place"
+				android:layout_width="fill_parent"
+				android:layout_height="wrap_content"
+				android:hint="Touch here to edit the place"
+				android:textSize="20px"
+				android:layout_marginRight="60px"
+				android:layout_marginLeft="60px">
+			</EditText>
+		</LinearLayout>
 	</TableRow>
 	
 	<TableRow
@@ -86,17 +102,25 @@
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:text="Group"
-			android:textSize="20px">
+			android:textSize="20px"
+			android:layout_marginLeft="60px">
 		</TextView>
 	</TableRow>
 	<TableRow
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content">
-		<Spinner
-			android:id="@+id/s_group"
-			android:layout_width="fill_parent"
-			android:layout_height="wrap_content">
-		</Spinner>
+		<LinearLayout
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:orientation="horizontal">
+			<Spinner
+				android:id="@+id/s_group"
+				android:layout_width="fill_parent"
+				android:layout_height="wrap_content"
+				android:layout_marginRight="60px"
+				android:layout_marginLeft="60px">
+			</Spinner>
+		</LinearLayout>
 	</TableRow>
 	
 	<TableRow
@@ -113,11 +137,33 @@
 	<TableRow
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content">
-		<Spinner
-			android:id="@+id/s_status"
-			android:layout_width="fill_parent"
-			android:layout_height="wrap_content">
-		</Spinner>
+		<RadioGroup
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:orientation="horizontal">
+			<RadioButton
+				android:id="@+id/rb_status_incomplete"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:text="Incomplete"
+				android:textSize="20px"
+				android:checked="true">
+			</RadioButton>
+			<RadioButton
+				android:id="@+id/rb_status_in_progress"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:text="In Progress"
+				android:textSize="20px">
+			</RadioButton>
+			<RadioButton
+				android:id="@+id/rb_status_complete"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:text="Complete"
+				android:textSize="20px">
+			</RadioButton>
+		</RadioGroup>
 	</TableRow>
 	
 	<TableRow
@@ -166,7 +212,7 @@
 		android:layout_height="wrap_content">
 		<EditText
 			android:id="@+id/et_note"
-			android:layout_width="fill_parent"
+			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:hint="Touch here to edit the note"
 			android:textSize="20px">
@@ -190,7 +236,7 @@
 		android:layout_height="wrap_content">
 		<AutoCompleteTextView
 			android:id="@+id/actv_tag"
-			android:layout_width="fill_parent"
+			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:hint="Touch here to edit the tag"
 			android:textSize="20px">
@@ -212,11 +258,29 @@
 	<TableRow
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content">
-		<Spinner
-			android:id="@+id/s_priority"
+		<LinearLayout
 			android:layout_width="fill_parent"
-			android:layout_height="wrap_content">
-		</Spinner>
+			android:layout_height="fill_parent"
+			android:orientation="horizontal">
+			<Button
+				android:id="@+id/b_priority_low"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:text="Low">
+			</Button>
+			<Button
+				android:id="@+id/b_priority_medium"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:text="Medium">
+			</Button>
+			<Button
+				android:id="@+id/b_priority_high"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:text="High">
+			</Button>
+		</LinearLayout>
 	</TableRow>
 	
 	<TableRow
@@ -234,11 +298,23 @@
 	<TableRow
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content">
-		<Spinner
-			android:id="@+id/s_deadline"
+		<LinearLayout
 			android:layout_width="fill_parent"
-			android:layout_height="wrap_content">
-		</Spinner>
+			android:layout_height="fill_parent"
+			android:orientation="horizontal">
+			<Button
+				android:id="@+id/b_deadline_date"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:text="Set Date">
+			</Button>
+			<Button
+				android:id="@+id/b_deadline_time"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:text="Set Time">
+			</Button>
+		</LinearLayout>
 	</TableRow>
 	
 	<TableRow
