--- a/ToDo_Replica/res/layout/add_contact.xml
+++ b/ToDo_Replica/res/layout/add_contact.xml
@@ -1,14 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <FrameLayout
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	android:layout_width="fill_parent"
-	android:layout_height="fill_parent">
-	
+	android:layout_height="wrap_content">	
 	<ListView
 		android:id="@+id/android:list"
 		android:layout_width="fill_parent"
 		android:layout_height="wrap_content"
 		android:scrollbars="vertical">
 	</ListView>
+	<Button
+		android:id="@+id/b_member_next"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:text="Finish"
+		android:textSize="20px"
+		android:layout_marginLeft="150px"
+		android:layout_marginRight="150px">
+	</Button>
 </FrameLayout>
