--- a/ToDo_Replica/res/layout/add_group.xml
+++ b/ToDo_Replica/res/layout/add_group.xml
@@ -3,12 +3,12 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent">
 <ScrollView
-	android:id="@+id/sv_add"
+	android:id="@+id/sv_add_group"
 	android:layout_width="wrap_content"
 	android:layout_height="wrap_content"
 	android:scrollbars="vertical">
 <TableLayout
-	android:id="@+id/tl_add"
+	android:id="@+id/tl_add_group"
 	android:layout_width="fill_parent"
 	android:layout_height="wrap_content"
 	android:stretchColumns="0">
