--- a/ToDo_Replica/res/layout/preview.xml
+++ b/ToDo_Replica/res/layout/preview.xml
@@ -4,11 +4,12 @@
 	android:id="@+id/th_preview"
 	android:layout_width="fill_parent"
 	android:layout_height="fill_parent">
+	
 <LinearLayout
-	android:id="@+id/ll_preview"
 	android:layout_width="fill_parent"
 	android:layout_height="fill_parent"
 	android:orientation="vertical">
+	
 <TabWidget
 	android:id="@android:id/tabs"
 	android:layout_width="fill_parent"
@@ -19,179 +20,272 @@
 	android:id="@android:id/tabcontent"
 	android:layout_width="fill_parent"
 	android:layout_height="fill_parent">
+
 <ScrollView
 	android:layout_width="wrap_content"
 	android:layout_height="wrap_content"
 	android:scrollbars="vertical">
+	
 <TableLayout
-	android:id="@+id/tl_preview_1"
-	android:layout_width="fill_parent"
+	android:id="@+id/tl_preview_21"
+	android:layout_width="wrap_content"
 	android:layout_height="wrap_content"
 	android:stretchColumns="0">
+	
 	<TableRow
-		android:id="@+id/tr_title_preview"
-		android:layout_width="fill_parent"
-		android:layout_height="wrap_content">
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:paddingTop="13dp">
 		<TextView
-			android:id="@+id/tv_title_preview1"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:text="Title"
-			android:textSize="20px">
-		</TextView>
-		<TextView
-			android:id="@+id/tv_title_preview2"
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:textSize="20px">
+			android:textSize="20px"
+			android:layout_marginLeft="60px">
 		</TextView>
 	</TableRow>
 	<TableRow
-		android:id="@+id/tr_place_preview"
-		android:layout_width="fill_parent"
+		android:layout_width="wrap_content"
 		android:layout_height="wrap_content">
+		<LinearLayout
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:orientation="horizontal">
+			<TextView
+				android:id="@+id/tv_title_2"
+				android:layout_width="fill_parent"
+				android:layout_height="wrap_content"
+				android:textSize="20px"
+				android:layout_marginRight="60px"
+				android:layout_marginLeft="60px">
+			</TextView>
+		</LinearLayout>
+	</TableRow>
+	
+	<TableRow
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:paddingTop="13dp">
 		<TextView
-			android:id="@+id/tv_place_preview1"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:text="Place"
-			android:textSize="20px">
-		</TextView>
-		<TextView
-			android:id="@+id/tv_place_preview2"
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:textSize="20px">
+			android:textSize="20px"
+			android:layout_marginLeft="60px">
 		</TextView>
 	</TableRow>
 	<TableRow
-		android:id="@+id/tr_group_preview"
-		android:layout_width="fill_parent"
+		android:layout_width="wrap_content"
 		android:layout_height="wrap_content">
+		<LinearLayout
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:orientation="horizontal">
+			<TextView
+				android:id="@+id/tv_place_2"
+				android:layout_width="fill_parent"
+				android:layout_height="wrap_content"
+				android:textSize="20px"
+				android:layout_marginRight="60px"
+				android:layout_marginLeft="60px">
+			</TextView>
+		</LinearLayout>
+	</TableRow>
+	
+	<TableRow
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:paddingTop="13dp">
 		<TextView
-			android:id="@+id/tv_group_preview1"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:text="Group"
-			android:textSize="20px">
-		</TextView>
-		<TextView
-			android:id="@+id/tv_group_preview2"
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:textSize="20px">
+			android:textSize="20px"
+			android:layout_marginLeft="60px">
 		</TextView>
 	</TableRow>
 	<TableRow
-		android:id="@+id/tr_status_preview"
-		android:layout_width="fill_parent"
+		android:layout_width="wrap_content"
 		android:layout_height="wrap_content">
+		<LinearLayout
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:orientation="horizontal">
+			<TextView
+				android:id="@+id/tv_group_2"
+				android:layout_width="fill_parent"
+				android:layout_height="wrap_content"
+				android:textSize="20px"
+				android:layout_marginRight="60px"
+				android:layout_marginLeft="60px">
+			</TextView>
+		</LinearLayout>
+	</TableRow>
+	
+	<TableRow
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:paddingTop="13dp">
 		<TextView
-			android:id="@+id/tv_status_preview1"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:text="Status"
-			android:textSize="20px">
+			android:textSize="20px"
+			android:layout_marginLeft="60px">
 		</TextView>
-		<TextView
-			android:id="@+id/tv_status_preview2"
+	</TableRow>
+	<TableRow
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content">
+		<LinearLayout
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
-			android:textSize="20px">
-		</TextView>
+			android:orientation="horizontal">
+			<TextView
+				android:id="@+id/tv_status_2"
+				android:layout_width="fill_parent"
+				android:layout_height="wrap_content"
+				android:textSize="20px"
+				android:layout_marginRight="60px"
+				android:layout_marginLeft="60px">
+			</TextView>
+		</LinearLayout>
 	</TableRow>
 </TableLayout>
 </ScrollView>
-</FrameLayout>
 
-<FrameLayout
-	android:id="@android:id/tabcontent"
-	android:layout_width="fill_parent"
-	android:layout_height="fill_parent">
 <ScrollView
 	android:layout_width="wrap_content"
 	android:layout_height="wrap_content"
 	android:scrollbars="vertical">
+	
 <TableLayout
-	android:id="@+id/tl_preview_2"
-	android:layout_width="fill_parent"
+	android:id="@+id/tl_preview_22"
+	android:layout_width="wrap_content"
 	android:layout_height="wrap_content"
 	android:stretchColumns="0">
+	
 	<TableRow
-		android:id="@+id/tr_note_preview"
-		android:layout_width="fill_parent"
-		android:layout_height="wrap_content">
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:paddingTop="13dp">
 		<TextView
-			android:id="@+id/tv_note_preview1"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:text="Note"
-			android:textSize="20px">
-		</TextView>
-		<TextView
-			android:id="@+id/tv_note_preview2"
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:textSize="20px">
+			android:textSize="20px"
+			android:layout_marginLeft="60px">
 		</TextView>
 	</TableRow>
 	<TableRow
-		android:id="@+id/tr_tag_preview"
-		android:layout_width="fill_parent"
+		android:layout_width="wrap_content"
 		android:layout_height="wrap_content">
+		<LinearLayout
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:orientation="horizontal">
+			<TextView
+				android:id="@+id/tv_note_2"
+				android:layout_width="fill_parent"
+				android:layout_height="wrap_content"
+				android:textSize="20px"
+				android:layout_marginRight="60px"
+				android:layout_marginLeft="60px">
+			</TextView>
+		</LinearLayout>
+	</TableRow>
+	
+	<TableRow
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:paddingTop="13dp">
 		<TextView
-			android:id="@+id/tv_tag_preview1"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:text="Tag"
-			android:textSize="20px">
-		</TextView>
-		<TextView
-			android:id="@+id/tv_tag_preview2"
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:textSize="20px">
+			android:textSize="20px"
+			android:layout_marginLeft="60px">
 		</TextView>
 	</TableRow>
 	<TableRow
-		android:id="@+id/tr_priority_preview"
-		android:layout_width="fill_parent"
+		android:layout_width="wrap_content"
 		android:layout_height="wrap_content">
+		<LinearLayout
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:orientation="horizontal">
+			<TextView
+				android:id="@+id/tv_tag_2"
+				android:layout_width="fill_parent"
+				android:layout_height="wrap_content"
+				android:textSize="20px"
+				android:layout_marginRight="60px"
+				android:layout_marginLeft="60px">
+			</TextView>
+		</LinearLayout>
+	</TableRow>
+	
+	<TableRow
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:paddingTop="13dp">
 		<TextView
-			android:id="@+id/tv_priority_preview1"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:text="Priority"
-			android:textSize="20px">
-		</TextView>
-		<TextView
-			android:id="@+id/tv_priority_preview2"
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:textSize="20px">
+			android:textSize="20px"
+			android:layout_marginLeft="60px">
 		</TextView>
 	</TableRow>
 	<TableRow
-		android:id="@+id/tr_deadline_preview"
-		android:layout_width="fill_parent"
+		android:layout_width="wrap_content"
 		android:layout_height="wrap_content">
+		<LinearLayout
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:orientation="horizontal">
+			<TextView
+				android:id="@+id/tv_priority_2"
+				android:layout_width="fill_parent"
+				android:layout_height="wrap_content"
+				android:textSize="20px"
+				android:layout_marginRight="60px"
+				android:layout_marginLeft="60px">
+			</TextView>
+		</LinearLayout>
+	</TableRow>
+	
+	<TableRow
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:paddingTop="13dp">
 		<TextView
-			android:id="@+id/tv_deadline_preview1"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:text="Deadline"
-			android:textSize="20px">
+			android:textSize="20px"
+			android:layout_marginLeft="60px">
 		</TextView>
-		<TextView
-			android:id="@+id/tv_deadline_preview2"
+	</TableRow>
+	<TableRow
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content">
+		<LinearLayout
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
-			android:textSize="20px">
-		</TextView>
+			android:orientation="horizontal">
+			<TextView
+				android:id="@+id/tv_deadline_2"
+				android:layout_width="fill_parent"
+				android:layout_height="wrap_content"
+				android:textSize="20px"
+				android:layout_marginRight="60px"
+				android:layout_marginLeft="60px">
+			</TextView>
+		</LinearLayout>
 	</TableRow>
 </TableLayout>
 </ScrollView>
 </FrameLayout>
-
 </LinearLayout>
 </TabHost>
