--- a/ToDo_Replica/res/layout/main_menu.xml
+++ b/ToDo_Replica/res/layout/main_menu.xml
@@ -5,6 +5,9 @@
     <item android:id="@+id/m_invitations"
     	  android:icon="@drawable/menu_pending_request"
     	  android:title="Invitations" />
+   	<item android:id="@+id/m_updates"
+          android:icon="@drawable/menu_feedback"
+          android:title="Updates" />
     <item android:id="@+id/m_feedback"
           android:icon="@drawable/menu_feedback"
           android:title="Feedback" />
